[gd_scene load_steps=39 format=2]

[ext_resource path="res://car/car_introduction.gd" type="Script" id=1]
[ext_resource path="res://car/assets/car_gif/frame-00.png" type="Texture" id=2]
[ext_resource path="res://car/assets/car_gif/frame-01.png" type="Texture" id=3]
[ext_resource path="res://car/assets/car_gif/frame-02.png" type="Texture" id=4]
[ext_resource path="res://car/assets/car_gif/frame-03.png" type="Texture" id=5]
[ext_resource path="res://car/assets/car_gif/frame-04.png" type="Texture" id=6]
[ext_resource path="res://car/assets/car_gif/frame-05.png" type="Texture" id=7]
[ext_resource path="res://car/assets/car_gif/frame-06.png" type="Texture" id=8]
[ext_resource path="res://car/assets/car_gif/frame-07.png" type="Texture" id=9]
[ext_resource path="res://car/assets/car_gif/frame-08.png" type="Texture" id=10]
[ext_resource path="res://car/assets/car_gif/frame-09.png" type="Texture" id=11]
[ext_resource path="res://car/assets/car_gif/frame-10.png" type="Texture" id=12]
[ext_resource path="res://car/assets/car_gif/frame-11.png" type="Texture" id=13]
[ext_resource path="res://car/assets/car_gif/frame-12.png" type="Texture" id=14]
[ext_resource path="res://car/assets/car_gif/frame-13.png" type="Texture" id=15]
[ext_resource path="res://car/assets/car_gif/frame-14.png" type="Texture" id=16]
[ext_resource path="res://car/assets/car_gif/frame-15.png" type="Texture" id=17]
[ext_resource path="res://car/assets/car_gif/frame-16.png" type="Texture" id=18]
[ext_resource path="res://car/assets/car_gif/frame-17.png" type="Texture" id=19]
[ext_resource path="res://car/assets/car_gif/frame-18.png" type="Texture" id=20]
[ext_resource path="res://car/assets/car_gif/frame-19.png" type="Texture" id=21]
[ext_resource path="res://car/assets/car_gif/frame-20.png" type="Texture" id=22]
[ext_resource path="res://car/assets/car_gif/frame-21.png" type="Texture" id=23]
[ext_resource path="res://car/assets/car_gif/frame-22.png" type="Texture" id=24]
[ext_resource path="res://car/assets/car_gif/frame-23.png" type="Texture" id=25]
[ext_resource path="res://car/assets/car_gif/frame-24.png" type="Texture" id=26]
[ext_resource path="res://car/assets/car_gif/frame-25.png" type="Texture" id=27]
[ext_resource path="res://car/assets/car_gif/frame-26.png" type="Texture" id=28]
[ext_resource path="res://car/assets/car_gif/frame-27.png" type="Texture" id=29]
[ext_resource path="res://car/assets/car_gif/frame-28.png" type="Texture" id=30]
[ext_resource path="res://car/assets/car_gif/frame-29.png" type="Texture" id=31]
[ext_resource path="res://car/assets/car_gif/frame-30.png" type="Texture" id=32]
[ext_resource path="res://car/assets/car_gif/frame-31.png" type="Texture" id=33]
[ext_resource path="res://fonts/assets/GreenFlame.ttf" type="DynamicFontData" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 34 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 34 )

[sub_resource type="Animation" id=4]
resource_name = "Alpha"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.501961 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.501961 ) ]
}

[node name="car_introduction" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 427, 240 )
frames = SubResource( 1 )
frame = 19
playing = true

[node name="game_over" type="Label" parent="."]
visible = false
margin_top = 148.047
margin_right = 855.397
margin_bottom = 180.047
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1

[node name="press_enter" type="Label" parent="."]
margin_top = 300.0
margin_right = 855.397
margin_bottom = 180.047
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 0.501961 )
text = "Press Enter"
align = 1
valign = 1
percent_visible = -0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="press_enter"]
anims/Alpha = SubResource( 4 )
[connection signal="animation_finished" from="press_enter/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
